--- a/server/insert2DB/static/index.html
+++ b/server/insert2DB/static/index.html
@@ -1,21 +1,14 @@
-{% load static %}
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>SchoolProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-      <!-- index.html -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="$
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script type="text/javascript" src="{% static 'es2015-polyfills.js' %}"></script>
-  <script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
-  <script type="text/javascript" src="{% static 'styles.js' %}"></script>
-  <script type="text/javascript" src="{% static 'vendor.js' %}"></script>
-  <script type="text/javascript" src="{% static 'runtime.js' %}"></script>
-  <script type="text/javascript" src="{% static 'main.js' %}"></script></body>
+  <!-- <script src="./node_modules/chart.js/dist/Chart.js"></script> -->
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
